kubernetes/catalog/lidarr/manifests/deployment.yaml
---
# Generated by InfraWeaver Community Apps from Unraid AppFeed
# Source: https://raw.githubusercontent.com/linuxserver/templates/main/unraid/lidarr.xml
# Category: MediaServer-Music, MediaApp-Music
# Stars: 523 | Downloads: 565962740
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    app.kubernetes.io/managed-by: infraweaver
    infraweaver.io/source: community-apps
    infraweaver.io/tier: simple
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      annotations:
        infraweaver.io/rebalance-memory: "true"
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr
          ports:
            - containerPort: 8686
              protocol: TCP
              name: webui
          startupProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 120
          readinessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8686
            periodSeconds: 30
            failureThreshold: 3
          volumeMounts:
            - name: lidarr-data-0
              mountPath: "/config"
            - name: tmp-music
              mountPath: "/music"
            - name: tmp-downloads
              mountPath: "/downloads"
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
      - name: lidarr-data-0
        persistentVolumeClaim:
          claimName: lidarr-data-0
      - name: tmp-music
        emptyDir:
      - name: tmp-downloads
        emptyDir:
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
    infraweaver.io/source: community-apps
spec:
  selector:
    app.kubernetes.io/name: lidarr
  ports:
    - port: 8686
      targetPort: 8686
      protocol: TCP
      name: webui
  type: ClusterIP
